--- a/CarManagement/appsettings.json
+++ b/CarManagement/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=EXE-PC-120\\SQLEXPRESS;Database=Cars;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=EXE-PC-120\\SQLEXPRESS;Database=Cars;Trusted_Connection=True;MultipleActiveResultSets=true",
+    //"DefaultConnection": "Server=localhost,1433; Database=Cars; User=sa; Password=Password123; MultipleActiveResultSets=true"
+
   },
   "Logging": {
     "LogLevel": {
